--- a/style.css
+++ b/style.css
@@ -433,11 +433,10 @@ section {
 }
 
 .skill-icon-img {
-  width: 48px;
-  height: 48px;
+  width: 56px;
+  height: 56px;
   object-fit: contain;
-  filter: brightness(0) invert(1);
-  opacity: 0.9;
+  display: block;
 }
 
 .skill-name {
@@ -564,11 +563,10 @@ section {
 }
 
 .project-icon-img {
-  width: 48px;
-  height: 48px;
+  width: 56px;
+  height: 56px;
   object-fit: contain;
-  filter: brightness(0) invert(1);
-  opacity: 0.9;
+  display: block;
 }
 
 .project-body {
@@ -687,8 +685,7 @@ footer {
   width: 24px;
   height: 24px;
   object-fit: contain;
-  filter: brightness(0) invert(1);
-  opacity: 0.9;
+  display: block;
 }
 
 .social-icon:hover {
@@ -699,7 +696,6 @@ footer {
 }
 
 .social-icon:hover .social-icon-img {
-  filter: brightness(0);
   opacity: 1;
 }
 
